--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     </header>
 
     <div class="search-container">
-        <input type="text" class="search-box" placeholder="Search for movies...">
+        <input type="text" class="search-box" placeholder="Search for movies..." onchange="onSearchChage(event)">
         <button class="search-button">Search</button>
     </div>
 
