--- a/Index.html
+++ b/Index.html
@@ -13,16 +13,12 @@
     </header>
 
     <div class="search-container">
-        <input type="text" class="search-box" placeholder="Search for movies..." onchange="onSearchChage(event)">
-        <button class="search-button">Search</button>
+        <input type="text" class="search-box" placeholder="Search for movies...">
+        <button class="search-button" onclick="renderCards()">Search</button>
     </div>
 
     <div class="movies-container">
-        <div class="movie-card">
-            <img class="movie-poster" src="https://via.placeholder.com/200x300" alt="Movie Poster">
-            <div class="movie-title">Sample Movie</div>
-        </div>
-        <!-- Add more movie cards dynamically here -->
+        
     </div>
 </body>
 </html>
